# solvexity

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  demo_mappings.py  docker-compose.yml  main.py  max_drawdown_analysis.py  osiris.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_mappings.py  test_nats_pub.py  test_nats_sub.py  visualize_all.sh
alpha/: feature_engineering.py  ohlcv_visualizer.py
app/: data.py  main.py
argparser/: backtest_argparser.py  datastream_argparser.py  feed_argparser.py  historical_argparser.py  offline_argparser.py  online_argparser.py  playback_argparser.py  strategy_argparser.py  trading_argparser.py
client/: helloworld_client.py
config/: backtest_example.json  backtest_example.json5  config.yml  config_debug.yml  config_influx.yml  config_influx_dispatcher.yml  config_influx_writer.yml  config_ochlv.yml  config_trade.yml  config_trade_binance_eth_usdt_spot.yml  datastream_example.json  datastream_history_example.json5  datastream_realtime_example.json5  indicators.yml  osiris.json  osiris.yml  osiris_conti.json  osiris_init.json  pattern.yml  playback_example.json  playback_example.json5  playback_example.py  strategy_example.json5  trading_example.json  trading_example.json5  trading_live_example.json5  trading_paper_example.json5  trading_test.json5
deployment/: Dockerfile  README.md  control.sh  docker-compose.yaml
helper/: __init__.py  logging.py  shutdown.py  utils.py  webhook.py
infra/: log_aggregator.py
notebooks/: feature_engineer.ipynb  hmm_clustering.ipynb  (+4 more)
(+386 files in other folders)
